# ParticlePhysics

./: .gitignore  CMakeLists.txt  Makefile  README.md
SICGConsole/: ReadMe.txt  SICGConsole.sln
SICGConsole/Debug/: SICGConsole.ilk
SICGConsole/SICGConsole/: AngularSpringForce.cpp  AngularSpringForce.h  CMakeLists.txt  CircularWireConstraint.cpp  CircularWireConstraint.h  Cloth.cpp  Cloth.h  Constraint.h  ContactForce.cpp  ContactForce.h  Force.h  GravityForce.cpp  GravityForce.h  Hair.cpp  Hair.h  Makefile  MouseForce.cpp  MouseForce.h  Object.cpp  Object.h  ObjectForce.cpp  ObjectForce.h  OldSolver.cpp  Particle.cpp  Particle.h  ParticleToy.cpp  Project1.cbp  RodConstraint.cpp  RodConstraint.h  SICGConsole.cpp  SICGConsole.rar  SICGConsole.vcxproj  SICGConsole.vcxproj.filters  SolidObject.cpp  SolidObject.h  Solver.cpp  SpringForce.cpp  SpringForce.h  imageio.cpp  imageio.h  (+2 more)
SICGConsole/SICGConsole/Debug/: SICGConsole.ilk  SICGConsole.pch  SICGConsole.vcxproj.FileListAbsolute.txt  euler.new.obj.enc  vc140.idb  vc142.idb
SICGConsole/SICGConsole/GL/: glut.h
SICGConsole/SICGConsole/constraints/: CircularWireConstraint.cpp  CircularWireConstraint.h  Constraint.h  RodConstraint.cpp  RodConstraint.h
SICGConsole/SICGConsole/forces/: AngularSpringForce.cpp  AngularSpringForce.h  ContactForce.cpp  ContactForce.h  Force.h  GravityForce.cpp  GravityForce.h  MouseForce.cpp  MouseForce.h  ObjectForce.cpp  ObjectForce.h  SpringForce.cpp  SpringForce.h
SICGConsole/SICGConsole/objects/: Cloth.cpp  Cloth.h  Hair.cpp  Hair.h  Object.h  (+4 more)
src/: Particle.cpp  ParticleToy.cpp
(+31 files in other folders)
